fix: Anchor spacing in front of anchor text cannot trigger selection

--- a/packages/semi-foundation/anchor/rtl.scss
+++ b/packages/semi-foundation/anchor/rtl.scss
@@ -11,7 +11,6 @@ $module: #{$prefix}-anchor;
         }
 
         &-link {
-            padding-right: $spacing-anchor_link-paddingLeft;
             padding-left: auto;
         }
     }
